[package]
name = "p2p-application"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
libp2p = { version = "0.54.1", features = ["full"] }
serde = { version = "1.0.217", features = ["default", "serde_derive"] }
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
ctrlc = { version = "3.4.5" , features = ["termination"] }
thiserror = "2.0.11"
tokio-util = "0.7.13"